--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
     "redux": "3.6.0",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "yarn": "1.7.0"
   },
   "devDependencies": {
     "autoprefixer": "7.1.4",
